[package]
name = "market_fsk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unitn_market_2022 = {version = "1.0.10", registry = "kellnr"}
random-string = "1.0.0"
chrono = "0.4.23"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"